# CS50

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  hello.c  libcs50-11.0.3.dylib  mario  mario.c  pyproject.toml
atoi/: README.md  atoi.c
bank/: README.md  bank.py
caesar/: README.md  caesar  caesar.c
cash/: README.md  cash.c  cash.py
debug/: README.md
dna/: dna.py
fiftyville/: README.md
filter-less/: README.md  filter.c.nobuild  helpers.c
filter-less/filter.dSYM/Contents/Resources/DWARF/: filter
filter-less/filter.dSYM/Contents/Resources/Relocations/aarch64/: filter.yml
half/: README.md  half.c
hello/: README.md  hello  hello.py
hours/: README.md  hours.c
inheritance/: README.md  inheritance.c
license/: README.md  license.c
mario/: README.md  mario.c  mario.py
max/: README.md  max.c
movies/: 10.sql  11.sql  12.sql  13.sql  6.sql  9.sql  README.md
movies/fiftyville/: log.sql
no-vowels/: README.md  no-vowels.c
password/: README.md  password.c
plurality/: README.md  plurality  plurality.c
prime/: README.md  prime.c
readability/: README.md  readability  readability.c  readability.py
recover/: README.md  recover.c
runoff/: README.md  runoff.c
scrabble/: README.md  scrabble  scrabble.c
snackbar/: README.md  snackbar.c
songs/: 3.sql  4.sql  5.sql  6.sql  7.sql  README.md
speller/: Makefile  README.md  dictionary.c  dictionary.c.bak
temps/: README.md  temps.c
trie/: trie.c
volume/: README.md  volume.c
