[tool.poetry]
name = "millenium-takehome"
version = "0.1.0"
description = ""
authors = ["Jonathan Gopel <jgopel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.12.*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
